# enigma2

./: configure.ac  e2reactor.py  mipsel-oe-linux-libtool  mytest.py
data/: keymap.xml  menu.xml  setup.xml  skin_text.xml  startwizard.xml
lib/: mini_ftp.h
lib/base/: filepush.cpp  message.h
lib/python/Plugins/Extensions/CoolTVGuide/Cool3D/Standard/: Makefile.am
lib/python/Plugins/Extensions/CoolTVGuide/CoolSkin/: CoolEasyGuide_1024.xml  CoolEasyGuide_1280.xml  CoolEasyGuide_720.xml  CoolInfoGuide_1024.xml  CoolInfoGuide_1280.xml  CoolInfoGuide_720.xml  CoolMultiGuide_1024.xml  CoolMultiGuide_1280.xml  CoolMultiGuide_720.xml  CoolNiceGuide_1024.xml  CoolNiceGuide_1280.xml  CoolNiceGuide_720.xml  CoolSearch_1024.xml  CoolSearch_1280.xml  CoolSearch_720.xml  CoolSingleGuide_1024.xml  CoolSingleGuide_1280.xml  CoolSingleGuide_720.xml  CoolTVGuideSetup.xml  CoolTVGuide_1024.xml  CoolTVGuide_1280.xml  CoolTVGuide_720.xml  CoolTinyGuide_1024.xml  CoolTinyGuide_1280.xml  CoolTinyGuide_720.xml  CoolUniGuide_1024.xml  CoolUniGuide_1280.xml  CoolUniGuide_720.xml  Makefile.am  colour.txt
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/CleanupWizard/: cleanupwizard.xml
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/meta/: plugin_commoninterfaceassignment.xml
lib/python/Plugins/SystemPlugins/CrashlogAutoSubmit/: plugin.py
lib/python/Plugins/SystemPlugins/DefaultServicesScanner/: plugin.py
lib/python/Plugins/SystemPlugins/NFIFlash/: downloader.py
lib/python/Plugins/SystemPlugins/NFIFlash/meta/: plugin_nfiflash.xml
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml
lib/python/Plugins/SystemPlugins/OldSoftwareUpdate/: plugin.py
lib/python/Plugins/SystemPlugins/SkinSelector/meta/: plugin_skinselector.xml
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  imagewizard.xml  plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/meta/: plugin_softwaremanager.xml
lib/python/Plugins/SystemPlugins/SoftwareUpdate/: plugin.py
lib/python/Plugins/SystemPlugins/TempFanControl/: plugin.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py
main/: Makefile.am  bsod.cpp  enigma.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
(+112 files in other folders)
