installdir = $(pkglibdir)/python/Plugins/Extensions/CoolTVGuide/CoolSkin

dist_install_DATA = \
	colour.txt \
	CoolEasyGuide_1024.xml \
	CoolEasyGuide_1280.xml \
	CoolEasyGuide_720.xml \
	CoolInfoGuide_1024.xml \
	CoolInfoGuide_1280.xml \
	CoolInfoGuide_720.xml \
	CoolMultiGuide_1024.xml \
	CoolMultiGuide_1280.xml \
	CoolMultiGuide_720.xml \
	CoolNiceGuide_1024.xml \
	CoolNiceGuide_1280.xml \
	CoolNiceGuide_720.xml \
	CoolSearch_1024.xml \
	CoolSearch_1280.xml \
	CoolSearch_720.xml \
	CoolSingleGuide_1024.xml \
	CoolSingleGuide_1280.xml \
	CoolSingleGuide_720.xml \
	CoolTinyGuide_1024.xml \
	CoolTinyGuide_1280.xml \
	CoolTinyGuide_720.xml \
	CoolTVGuide_1024.xml \
	CoolTVGuide_1280.xml \
	CoolTVGuide_720.xml \
	CoolTVGuideSetup.xml \
	CoolUniGuide_1024.xml \
	CoolUniGuide_1280.xml \
	CoolUniGuide_720.xml
